cli/tests/snapshots/help__replace_start.snap
---
source: cli/tests/help.rs
expression: "help(&[\"replace\", \"start\"])"
---
Replace a device in the filesystem.

The source device can be specified either as a path (e.g. /dev/sdb) or as a
numeric device ID. The target device will be used to replace the source. The
filesystem must be mounted at mount_point.

Usage: start [OPTIONS] <SOURCE> <TARGET> <MOUNT_POINT>

Arguments:
  <SOURCE>
          Source device path or devid to replace

  <TARGET>
          Target device that will replace the source

  <MOUNT_POINT>
          Mount point of the filesystem

Options:
  -r, --redundancy-only
          Only read from srcdev if no other zero-defect mirror exists

  -f, --force
          Force using and overwriting targetdev even if it contains a valid
          btrfs filesystem

  -B, --no-background
          Do not background the replace operation; wait for it to finish

      --enqueue
          Wait if there's another exclusive operation running, instead of
          returning an error

  -K, --nodiscard
          Do not perform whole device TRIM on the target device

  -h, --help
          Print help (see a summary with '-h')
