cli/tests/snapshots/help__scrub_cancel.snap
---
source: cli/tests/help.rs
expression: "help(&[\"scrub\", \"cancel\"])"
---
Cancel a running scrub

Usage: cancel <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem or a device

Options:
  -h, --help
          Print help
